Codefinity/boolean.txt

==  equal to;

!=  not equal to;

>   greater than;

<   less than;

>=  greater than or equal to;

<=  less than or equal to;


type(var) is int ??
isinstance(var, int) ??


# Initial string
site = "codefinity"

# Using membership operator
print("n" in site)

# True




Pyton output:

>>> print(765 * 43)
32895
>>> print(456 * 78)
35568
>>> print(765 * 43 <= 456 * 78)
True
>>>


Is 2 equal to 4? False
Is 982*37 greater than 354*98? False

Is 2 equal to 4? False
Is 982*37 greater than 354*98? True




>>> print(type(3.15)
...
...
...
...
...
...
...
... num = 3.15
  File "<stdin>", line 1
    print(type(3.15)
          ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
>>> num = 3.15
>>> num
3.15
>>> type(3.15)
<class 'float'>
>>> print(type(num) is int)
False
>>> print(type(num) is float)
True
>>>
